update service batch, package, update vaccine